--- a/Kiểm tra/kiem-tra.css
+++ b/Kiểm tra/kiem-tra.css
@@ -74,3 +74,14 @@ img:hover {
 .wrap {
     overflow: hidden
 }
+h1 {
+    animation: blink 0.8s infinite;
+}
+@keyframes blink {
+    0% {
+        color: white;
+    }
+    100% {
+        color: red;
+    }
+}
