--- a/gioithieu.css
+++ b/gioithieu.css
@@ -4,6 +4,7 @@
     justify-content: space-around;
     display: flex;
     margin-top: 13px;
+    margin-left: 390px;
     margin-right: 100px;
     float: right;
 }
