--- a/profile.css
+++ b/profile.css
@@ -53,6 +53,7 @@
     justify-content: space-around;
     display: flex;
     margin-top: 13px;
+    margin-left: 390px;
     margin-right: 100px;
     float: right;
 }
