--- a/HTML & CSS/Girls learn to code/trangchu.css
+++ b/HTML & CSS/Girls learn to code/trangchu.css
@@ -17,8 +17,9 @@ a {
     transition-duration: 0.5s;
 }
 .description {
-    font-size: 17px;
-    margin-top: 20px;
+    font-size: 30px;
+    margin-top: 0px;
+    font-family: 'Cabin'
 }
 a:hover {
     color: #378B9B;
@@ -41,10 +42,35 @@ a:hover {
     text-align: center;
 }
 .box {
-    width: 20%;
+    width: 24%;
     margin: 15px;
     box-shadow: 0 0 3px rgba(0,0,0,0.3);
-    border-radius: 10px;
+    transition: 0.5s;
     overflow: hidden;
-    transition: 0.5s
+    text-align: center;
+}
+h2 {
+    font-family: 'Cabin';
+    color: #378B9B
+}
+.sub-description {
+    font-family: 'Cabin';
+    font-size: 28px;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+.more {
+    font-size: 28px;    
+    font-family: 'Cabin';
+    background-color: #378B9B;
+    width: 40%;
+    color: white;
+    margin-left: 80px;
+    margin-bottom: 20px;
+}
+p {
+    cursor: pointer;
+}
+.img-description {
+    width: 279px;
 }
