--- a/HTML & CSS/Girls learn to code/trangchu.css
+++ b/HTML & CSS/Girls learn to code/trangchu.css
@@ -13,7 +13,7 @@ a {
     text-transform: capitalize;
     font-size: 24px;
     text-decoration: none;
-    font-family: sans-serif;
+    font-family: 'Prompt';
     transition-duration: 0.5s;
 }
 .description {
