--- a/HTML & CSS/Girls learn to code/trangchu.css
+++ b/HTML & CSS/Girls learn to code/trangchu.css
@@ -17,7 +17,7 @@ a {
     transition-duration: 0.5s;
 }
 .description {
-    font-size: 30px;
+    font-size: 27px;
     margin-top: 0px;
     font-family: 'Cabin'
 }
@@ -42,12 +42,15 @@ a:hover {
     text-align: center;
 }
 .box {
-    width: 24%;
+    width: 278.328px;
     margin: 15px;
     box-shadow: 0 0 3px rgba(0,0,0,0.3);
     transition: 0.5s;
     overflow: hidden;
     text-align: center;
+}
+.box:hover {
+    box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.3)
 }
 h2 {
     font-family: 'Cabin';
@@ -55,22 +58,22 @@ h2 {
 }
 .sub-description {
     font-family: 'Cabin';
-    font-size: 28px;
+    font-size: 24px;
     font-weight: bold;
     margin-bottom: 30px;
 }
 .more {
-    font-size: 28px;    
+    font-size: 20px;    
     font-family: 'Cabin';
     background-color: #378B9B;
     width: 40%;
     color: white;
-    margin-left: 80px;
     margin-bottom: 20px;
+    margin-left: 20px;
 }
 p {
     cursor: pointer;
 }
 .img-description {
-    width: 279px;
+    width: 100%;
 }
