--- a/Girls learn to code/trangchu.css
+++ b/Girls learn to code/trangchu.css
@@ -20,6 +20,7 @@ a {
     text-decoration: none;
     font-family: 'Prompt';
     transition-duration: 0.5s;
+    border-bottom: 3px solid transparent;
 }
 .description {
     font-size: 27px;
